objects/Nebula__Log__c.object
<CustomObject>
    <fields>
        <fullName>Nebula__UserLicenseDefinitionKey__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <description>https://developer.salesforce.com/docs/atlas.en-us.object_reference.meta/object_reference/sforce_api_objects_userlicense.htm</description>
        <label>User License Definition Key</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUL</fullName>
                </value>
                <value>
                    <fullName>AUL_LIGHT</fullName>
                </value>
                <value>
                    <fullName>AUL1</fullName>
                </value>
                <value>
                    <fullName>FDC_ONE</fullName>
                </value>
                <value>
                    <fullName>FDC_SUB</fullName>
                </value>
                <value>
                    <fullName>Overage_Platform_Portal_User</fullName>
                </value>
                <value>
                    <fullName>PID_CHATTER</fullName>
                </value>
                <value>
                    <fullName>PID_CONTENT</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Community</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Community_Login</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Customer_Portal_Standard</fullName>
                </value>
                <value>
                    <fullName>PID_FDC_FREE</fullName>
                </value>
                <value>
                    <fullName>PID_IDEAS</fullName>
                </value>
                <value>
                    <fullName>PID_Ideas_Only_Portal</fullName>
                </value>
                <value>
                    <fullName>PID_Ideas_Only_Site</fullName>
                </value>
                <value>
                    <fullName>PID_KNOWLEDGE</fullName>
                </value>
                <value>
                    <fullName>PID_Limited_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Limited_Customer_Portal_Standard</fullName>
                </value>
                <value>
                    <fullName>PID_Overage_Customer_Portal_Basic</fullName>
                </value>
                <value>
                    <fullName>PID_Overage_High</fullName>
                </value>
                <value>
                    <fullName>PID_Partner_Community</fullName>
                </value>
                <value>
                    <fullName>PID_Partner_Community_Login</fullName>
                </value>
                <value>
                    <fullName>PID_STRATEGIC_PRM</fullName>
                </value>
                <value>
                    <fullName>Platform_Portal_User</fullName>
                </value>
                <value>
                    <fullName>POWER_PRM</fullName>
                </value>
                <value>
                    <fullName>POWER_SSP</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__UserLicenseId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User License ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLicenseName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User License Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analytics Cloud Integration User</fullName>
                </value>
                <value>
                    <fullName>Authenticated Website</fullName>
                </value>
                <value>
                    <fullName>Chatter External</fullName>
                </value>
                <value>
                    <fullName>Chatter Free</fullName>
                </value>
                <value>
                    <fullName>Cloud Integration User</fullName>
                </value>
                <value>
                    <fullName>Customer Community</fullName>
                </value>
                <value>
                    <fullName>Customer Community Login</fullName>
                </value>
                <value>
                    <fullName>Customer Community Plus</fullName>
                </value>
                <value>
                    <fullName>Customer Community Plus Login</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Custom</fullName>
                </value>
                <value>
                    <fullName>Customer Portal Manager Standard</fullName>
                </value>
                <value>
                    <fullName>External Identity</fullName>
                </value>
                <value>
                    <fullName>Force.com - App Subscription</fullName>
                </value>
                <value>
                    <fullName>Force.com - Free</fullName>
                </value>
                <value>
                    <fullName>Gold Partner</fullName>
                </value>
                <value>
                    <fullName>High Volume Customer Portal</fullName>
                </value>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Partner App Subscription</fullName>
                </value>
                <value>
                    <fullName>Partner Community</fullName>
                </value>
                <value>
                    <fullName>Partner Community Login</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Salesforce Platform</fullName>
                </value>
                <value>
                    <fullName>Silver Partner</fullName>
                </value>
                <value>
                    <fullName>Work.com Only</fullName>
                </value>
                <value>
                    <fullName>XOrg Proxy User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__UserLoggingLevelOrdinal__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Logging Level Ordinal</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nebula__UserLoggingLevel__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Logging Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Nebula__LoggingLevel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__UserRoleId__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Role ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserRoleLink__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>HYPERLINK(&apos;/&apos; + Nebula__UserRoleId__c, Nebula__UserRoleName__c, &apos;_top&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserRoleName__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nebula__UserType__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>PowerPartner</fullName>
                </value>
                <value>
                    <fullName>CSPLitePortal</fullName>
                </value>
                <value>
                    <fullName>CustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>PowerCustomerSuccess</fullName>
                </value>
                <value>
                    <fullName>CsnOnly</fullName>
                </value>
                <value>
                    <fullName>AutomatedProcess</fullName>
                </value>
                <value>
                    <fullName>Guest</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nebula__WasLoggedByCurrentUser__c</fullName>
        <complianceGroup>PII;GDPR;CCPA</complianceGroup>
        <formula>$User.Id ==  Nebula__LoggedBy__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged By Current User</label>
        <type>Checkbox</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>Nebula__AllAsynchronousLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__SystemMode__c</field>
            <operation>equals</operation>
            <value>BATCH_ACS,BATCH_APEX,BATCH_CHUNK_PARALLEL,BATCH_CHUNK_SERIAL,BULK_API,FUTURE,QUEUEABLE,SCHEDULED</value>
        </filters>
        <label>All Asynchronous Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllBatchLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__SystemMode__c</field>
            <operation>equals</operation>
            <value>BATCH_ACS,BATCH_APEX,BATCH_CHUNK_PARALLEL,BATCH_CHUNK_SERIAL</value>
        </filters>
        <label>All Batch Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllClosedLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__ClosedBy__c</columns>
        <columns>Nebula__ClosedDate__c</columns>
        <columns>Nebula__Issue__c</columns>
        <columns>Nebula__Comments__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__Scenario__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllLogsWithERROREntries</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__TotalERRORLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Logs with ERROR Entries</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllLogsWithERRORorWARNEntries</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__TotalERRORLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Nebula__TotalWARNLogEntries__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Logs with ERROR or WARN Entries</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllOpenLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllRESTLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__SystemMode__c</field>
            <operation>equals</operation>
            <value>REST</value>
        </filters>
        <label>All REST Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__AllResolvedLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__ClosedBy__c</columns>
        <columns>Nebula__ClosedDate__c</columns>
        <columns>Nebula__Issue__c</columns>
        <columns>Nebula__Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__IsClosed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Nebula__IsResolved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Resolved Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__LogsToPurgeSoon</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__Scenario__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>Nebula__LogPurgeAction__c</columns>
        <columns>Nebula__LogRetentionDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__LogRetentionDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Nebula__LogRetentionDate__c</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_N_DAYS:10</value>
        </filters>
        <label>Logs To Purge Soon</label>
    </listViews>
    <listViews>
        <fullName>Nebula__MyAssignedLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assigned Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__MyAssignedOpenLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__LoggedByUsernameLink__c</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Nebula__IsClosed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Assigned Open Logs</label>
    </listViews>
    <listViews>
        <fullName>Nebula__MyGeneratedLogs</fullName>
        <columns>NAME</columns>
        <columns>Nebula__StartTime__c</columns>
        <columns>Nebula__Priority__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Nebula__Status__c</columns>
        <columns>Nebula__TransactionId__c</columns>
        <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
        <columns>Nebula__TotalLogEntries__c</columns>
        <columns>Nebula__TotalERRORLogEntries__c</columns>
        <columns>Nebula__TotalWARNLogEntries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nebula__WasLoggedByCurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Generated Logs</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Nebula__LoggedByUser__c</fullName>
        <label>Log Created By User</label>
    </sharingReasons>
</CustomObject>